# lattice

./: Cargo.toml  Makefile  README.md  build.rs
config/: lattice.toml
docs/: deployment.md  high_availability.md  interop.md  memcached.md  performance.md  redis.md  specification.md
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/etcd/: auth.rs  errors.rs  grpc.rs  kv.rs  lease.rs  mod.rs  proto.rs  service.rs  txn.rs  watch.rs
src/adapters/memcached/: mod.rs  service.rs
src/adapters/memcached/commands/: mod.rs  other.rs  retrieval.rs  storage.rs
src/adapters/memcached/protocol/: ascii.rs  binary.rs  codec.rs  mod.rs
src/adapters/redis/: mod.rs  service.rs
src/adapters/redis/commands/: connection.rs  keys.rs  mod.rs  pubsub.rs  server.rs  strings.rs  transactions.rs
src/adapters/redis/protocol/: codec.rs  mod.rs  resp2.rs  resp3.rs
src/adapters/tcp/: codec.rs  connection.rs  mod.rs  pipeline.rs
src/cli/: mod.rs
src/cli/commands/: cluster.rs  config.rs  init.rs  inspect.rs  mod.rs  snapshot.rs  start.rs  status.rs  telemetry.rs
src/control/: api.rs  cache.rs  capabilities.rs  mod.rs  placement.rs  routing.rs
src/core/: config.rs  error.rs  mod.rs  runtime.rs  time.rs
src/kpg/: apply_loop.rs  idempotency.rs  lease.rs  lin_bound.rs  mod.rs  revision.rs  state_machine.rs  ttl.rs  watch.rs
src/net/: listeners.rs  mod.rs  security.rs  tcp.rs  tls.rs
src/ops/: audit.rs  dr.rs  mod.rs  observability.rs  telemetry.rs  version.rs
src/storage/: compaction.rs  mod.rs  wal.rs
telemetry/: .gitkeep  catalog.json
tests/: adapters.rs  common.rs  control.rs  core.rs  interop.rs  kpg.rs  net.rs  ops.rs
tools/telemetry_guard/: Cargo.toml
tools/telemetry_guard/src/: main.rs
tools/wire_lint/: Cargo.toml
tools/wire_lint/src/: main.rs
wire/: .gitkeep  etcd.json  memcached.json  redis.json
