[package]
name = "wire_lint"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Wire protocol definition linting tool for Lattice"

[[bin]]
name = "wire_lint"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.20", features = ["derive"] }
